Updating the website https://gol.quantium.com.mx/

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "keywords": [
     "gameoflife"
   ],
-  "homepage": "https://github.com/quantium/gameoflife#readme",
+  "homepage": "https://gol.quantium.com.mx",
   "bugs": {
     "url": "https://github.com/quantium/gameoflife/issues"
   },
